force-app/main/default/objects/Yacht_Availability__c/Yacht_Availability__c.object-meta.xml
<CustomObject>
    <label>Yacht Availability</label>
    <nameField>
        <displayFormat>YAVL-{000000}</displayFormat>
        <label>Yacht Availability Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Yacht Availabilities</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>