force-app/main/default/objects/Yacht_Availability__c/fields/External_Availability_ID__c.field-meta.xml
<CustomField>
    <fullName>External_Availability_ID__c</fullName>
    <externalId>true</externalId>
    <label>External Availability ID</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>