force-app/main/default/objects/Yacht_Availability__c/fields/Yacht__c.field-meta.xml
<CustomField>
    <fullName>Yacht__c</fullName>
    <label>Yacht</label>
    <referenceTo>Yacht__c</referenceTo>
    <relationshipLabel>Yacht Availabilities</relationshipLabel>
    <relationshipName>Yacht_Availabilities</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>